# funcspinner

./: CurveFitting_all_tester.py  README.md  core.py  example_funcspinner.py  funcspinner.py  pyproject.toml  simple_curve_fitting.py
src/: __init__.py
tests/: test_funcspinner.py
