[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "funcspinner"
version = "0.1.0"
authors = [
  { name="Stephen Joseph", email="stephen.joseph@gmail.com" },
]
description = "A comprehensive objective function library for curve fitting"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
"Homepage" = "https://github.com/sjosephnyc1987/funcspinner"
